--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,9 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!DOCTYPE html>
     <html lang="en">
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Ibarra+Real+Nova:wght@600&family=Inconsolata:wght@200;300;400;500&family=Lato:wght@100&family=Playfair+Display&family=Slabo+27px&display=swap" rel="stylesheet">
       
         <link
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
